added Line break

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> Sravan Reddy</title>
+		<title> Sravan Reddy Assignment One Page One</title>
 	</head>
 
 	<body>
 		<div> 
-			<p> This is the first file </p>
-			<img src="http://www.pawderosa.com/images/puppies.jpg"> </img> 
-			<!-- Citation:  -->
-			<a href="./file.html"> Link to the second page </a>
+			<p> This is a puppy </p>
+			<img src="http://www.pawderosa.com/images/puppies.jpg"> </img>
+			<!-- Picture taken from: http://www.pawderosa.com/images/puppies.jpg -->
+			<br>
+			<a href="file.html"> Link to the second page! </a>
+
 			<ul> 
 				<li> The puppy is cute </li>
 				<li> The puppy is happy </li>
 			</ul>
 		</div>
 			
-
-
 	</body>
 </html>
 
