Re-structed comments and image folder

--- a/file.html
+++ b/file.html
@@ -7,9 +7,9 @@
 	<body>
 		<div> 
 			<p> This is a kitten </p>
-			<img src="http://exh5266.cias.rit.edu/256/homework3/images/kitten.jpg"> </img>
+			<img src="images/kitten.jpg"> </img>
 			<br>
-			<!-- Picture taken from: http://exh5266.cias.rit.edu/256/homework3/images/kitten.jpg -->
+			<!-- Image taken from: http://exh5266.cias.rit.edu/256/homework3/images/kitten.jpg -->
 
 			<a href="index.html"> Link to the first page! </a>
 			<ul> 
