--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 	<body>
 		<div> 
 			<p> This is a puppy </p>
-			<img src="http://www.pawderosa.com/images/puppies.jpg"> </img>
-			<!-- Picture taken from: http://www.pawderosa.com/images/puppies.jpg -->
+			<img src="images/puppy.jpg"> </img>
+			<!-- Image taken from: http://www.pawderosa.com/images/puppies.jpg -->
 			<br>
 			<a href="file.html"> Link to the second page! </a>
 
