Changed image tag

--- a/assignment01/file.html
+++ b/assignment01/file.html
@@ -7,7 +7,7 @@
 	<body>
 		<div> 
 			<p> This is a kitten </p>
-			<img src="images/kitten.jpg"> </img>
+			<img src="images/kitten.jpg" alt = "A kitten!!"> 
 			<br>
 			<!-- Image taken from: http://exh5266.cias.rit.edu/256/homework3/images/kitten.jpg -->
 
