--- a/assignment01/index.html
+++ b/assignment01/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<div> 
 			<p> This is a puppy </p>
-			<img src="images/puppy.jpg"> </img>
+			<img src="images/puppy.jpg" alt = "A puppy!!">
 			<!-- Image taken from: http://www.pawderosa.com/images/puppies.jpg -->
 			<br>
 			<a href="file.html"> Link to the second page! </a>
